@@ -4,7 +4,10 @@
  * Sebastian Hammer, Adam Dickmeiss
  *
  * $Log: zget.c,v $
- * Revision 1.15  1998-03-31 15:13:19  adam
+ * Revision 1.16  1998-08-19 16:10:05  adam
+ * Changed som member names of DeleteResultSetRequest/Response.
+ *
+ * Revision 1.15  1998/03/31 15:13:19  adam
  * Development towards compiled ASN.1.
  *
  * Revision 1.14  1998/02/11 11:53:32  adam
@@ -207,11 +210,7 @@ Z_DeleteResultSetRequest *zget_DeleteResultSetRequest(ODR o)
     r->referenceId = 0;
     r->deleteFunction = (int *)odr_malloc(o, sizeof(int));
     *r->deleteFunction = Z_DeleteRequest_list;
-#ifdef ASN_COMPILED
     r->num_resultSetList = 0;
-#else
-    r->num_ids = 0;
-#endif
     r->resultSetList = 0;
 #ifdef Z_95
     r->otherInfo = 0;
@@ -226,19 +225,9 @@ Z_DeleteResultSetResponse *zget_DeleteResultSetResponse(ODR o)
     r->referenceId = 0;
     r->deleteOperationStatus = (int *)odr_malloc(o, sizeof(int));
     *r->deleteOperationStatus = Z_DeleteStatus_success;
-#ifdef ASN_COMPILED
     r->deleteListStatuses = 0;
-#else
-    r->num_statuses = 0;
-    r->deleteListStatuses = 0;
-#endif
     r->numberNotDeleted = 0;
-#ifdef ASN_COMPILED
     r->bulkStatuses = 0;
-#else
-    r->num_bulkStatuses = 0;
-    r->bulkStatuses = 0;
-#endif
     r->deleteMessage = 0;
 #ifdef Z_95
     r->otherInfo = 0;
