@@ -1,5 +1,7 @@
 Possible compatibility problems with earlier versions marked with '*'.
 
+* Slightly changed some member names of DeleteResultSetRequest/Response.
+
 * Changed some C definitions regarding EXPLAIN record syntax (prt-exp.h)
 and added member 'languages' in TargetInfo (which was missing).
 
